--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -1,6 +1,56 @@
-extends layout
+doctype html
+html
+	head
+	title TranslateHub
+	body
 
-block content
-	div
-		a(id='sender')='Send a Message'
-		ul(id='receiver')
+	select(data-bind="options: $root.availableBranches, value: selectedBranch, optionsText: 'name', click: $root.switchBranch, optionsCaption: 'Branch...'")
+	br
+	button(data-bind="click: test")
+	br
+
+	p(data-toggle="tooltip", title="first tooltip")="Hover over me"
+
+	br
+	br
+
+	table(class="table table-striped table-condensed")
+		thead
+			tr
+				th.col-lg-5 Key
+				th.col-lg-1 Locale
+				th.col-lg-6 Value
+
+		tbody(data-bind="foreach: keys")
+			tr
+				td(data-bind="attr: {rowspan: values.length+1}")
+					small(data-bind="text: fullName")
+				td
+					small Default
+				td(data-bind="with: defaultValue, keyValueEditor: defaultValue")
+			// ko foreach: values
+			tr
+				td(data-bind="css: { warning: !$data.hasValue() }")
+					small(data-bind="text: locale.getLocaleCode()")
+				td(data-bind="with: $data, keyValueEditor: $data, css: { warning: !$data.hasValue() }")
+			// /ko
+
+	// JQuery
+	script(type="text/javascript", src="js/lib/jquery-1.10.2.min.js")
+
+	// Knockout
+	script(type="text/javascript", src="js/lib/knockout-2.3.0.debug.js")
+
+	// Bootstrap
+	link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css")
+	link(rel="stylesheet", href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css")
+	script(src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js")
+
+	script(src="/js/common.js")
+	script(src="/js/index.js")
+
+
+	script.
+		$( function () {
+			$( "[data-toggle='tooltip']" ).tooltip();
+		} );
